# strace-process-tree

./: .coveragerc  .gitignore  .travis.yml  CHANGES.rst  MANIFEST.in  Makefile  README.rst  appveyor.yml  pyproject.toml  pytest.ini  release.mk  setup.cfg  setup.py  strace-process-tree  strace_process_tree.py  strace_process_tree_example_output.txt  tests.py  tox.ini
.github/workflows/: build.yml
