[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[mypy]
strict = true

[zest.releaser]
python-file-with-version = strace_process_tree.py
create-wheel = yes

[flake8]
extend-ignore = E501
# https://pep8.readthedocs.org/en/latest/intro.html#error-codes
# E501: line too long (82 > 79 characters)

[isort]
# from X import (
#   a,
#   b,
# )
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2
reverse_relative = true
default_section = THIRDPARTY
known_first_party = strace_process_tree
# known_third_party = pytest, ...
# skip = filename...
